data/derived/comb/progs/unify/prog3904.ml.out
Characters 190-192:
  | Cosine (a) -> cos( pi * pi)
                       ^^
Error: This expression has type float but an expression was expected of type
         int
